change crt to TheBloke/Llama-2-13B-chat-GPTQ and use correct prompt template

--- a/crt/crt.ipynb
+++ b/crt/crt.ipynb
@@ -3,86 +3,98 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "initial_id",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    # Installing packages in Google Colab environment\n",
-    "    !pip install transformers\n",
-    "\n",
-    "    # Mounting google drive to enable access to data files\n",
-    "    from google.colab import drive\n",
-    "    drive.mount('/content/drive')\n",
-    "\n",
-    "    # Changing working directory to ex1\n",
-    "    %cd /content/drive/MyDrive/LLM4behavior_workshop/ex3"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "!pip install transformers accelerate optimum auto-gptq"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from transformers import pipeline"
+    "from transformers import AutoModelForCausalLM, AutoTokenizer, pipeline\n",
+    "import torch"
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "id": "8da14fe201c279e3"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# Initializing the pipeline\n",
-    "generator = pipeline(\"text-generation\", model='gpt2')\n",
-    "generator"
+    "model_ckpt = \"TheBloke/Llama-2-13B-chat-GPTQ\"\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    model_ckpt, device_map=\"auto\", \n",
+    "    trust_remote_code=False, revision=\"main\"\n",
+    ")\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_ckpt, use_fast=True)"
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "id": "1c95aa05c24721a8"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
-    "prompts = [\n",
-    "    'A bat and a ball cost $1.10 in total. The bat costs $1.00 more than the ball. How much does the ball cost?',\n",
-    "    'If it takes 5 machines 5 minutes to make 5 widgets, how long would it take 100 machines to make 100 widgets?',\n",
-    "    'In a lake, there is a patch of lily pads. Every day, the patch doubles in size. If it takes 48 days for the patch to cover the entire lake, how long would it take for the patch to cover half of the lake?'\n",
-    "]"
+    "generator = pipeline(\n",
+    "    \"text-generation\", model=model,\n",
+    "    tokenizer=tokenizer, max_new_tokens=512,\n",
+    "    do_sample=False\n",
+    ")\n",
+    "\n",
+    "# Prompt template adapted from https://huggingface.co/TheBloke/Llama-2-7b-Chat-GPTQ\n",
+    "prompt = (\n",
+    "    \"1. A bat and a ball cost $1.10 in total. \"\n",
+    "    \"The bat costs $1.00 more than the ball. \"\n",
+    "    \"How much does the ball cost?\\n\"\n",
+    "    \"2. If it takes 5 machines 5 minutes to make 5 widgets, \"\n",
+    "    \"how long would it take 100 machines to make 100 widgets?\\n\"\n",
+    "    \"3. In a lake, there is a patch of lily pads. \"\n",
+    "    \"Every day, the patch doubles in size. \"\n",
+    "    \"If it takes 48 days for the patch to cover the entire lake, \"\n",
+    "    \"how long would it take for the patch to cover half of the lake?\\n\"\n",
+    ")\n",
+    "\n",
+    "prompt_template = (\n",
+    "    f\"[INST] <<SYS>>\\n\"\n",
+    "    \"You are about to participate in a psychology experiment with three questions. \"\n",
+    "    \"Please take your time to consider your answer to each question, \"\n",
+    "    \"and provide a short answer.\\n\"\n",
+    "    f\"<</SYS>>\\n{prompt}[/INST]\\n\"\n",
+    ")\n",
+    "\n",
+    "\n",
+    "print(prompt_template)"
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "id": "25d5eb9cbd224bf4"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# Generating outputs\n",
-    "outputs = generator(prompts, max_length=100)\n",
-    "\n",
-    "# Printing\n",
-    "for prompt, output in zip(prompts, outputs):\n",
-    "    print('-----------------------------')\n",
-    "    print('\\033[1m' + prompt + '\\033[0m')\n",
-    "    print('-----------------------------')\n",
-    "\n",
-    "    # Getting the generated text output from the output dictionary\n",
-    "    output = output[0]['generated_text']\n",
-    "\n",
-    "    # Dropping the prompt from the output for nicer formatting\n",
-    "    print(output.replace(prompt, '').strip())"
+    "output = generator(prompt_template)\n",
+    "print(output[0]['generated_text'])"
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "id": "4a6d36408e2387b2"
   }
  ],
  "metadata": {
@@ -105,5 +117,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 5
 }
