delete unecessary imports

--- a/crt/crt.ipynb
+++ b/crt/crt.ipynb
@@ -9,7 +9,17 @@
    },
    "outputs": [],
    "source": [
-    "!pip install transformers accelerate optimum auto-gptq"
+    "import sys\n",
+    "if 'google.colab' in sys.modules:  # If in Google Colab environment\n",
+    "    # Installing requisite packages\n",
+    "    !pip install transformers accelerate optimum auto-gptq\n",
+    "\n",
+    "    # Mount google drive to enable access to data files\n",
+    "    from google.colab import drive\n",
+    "    drive.mount('/content/drive')\n",
+    "\n",
+    "    # Change working directory to ex1\n",
+    "    %cd /content/drive/MyDrive/LLM4behavior_workshop/crt"
    ]
   },
   {
@@ -17,8 +27,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from transformers import AutoModelForCausalLM, AutoTokenizer, pipeline\n",
-    "import torch"
+    "from transformers import pipeline"
    ],
    "metadata": {
     "collapsed": false
@@ -30,13 +39,12 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "model_ckpt = \"TheBloke/Llama-2-13B-chat-GPTQ\"\n",
-    "model = AutoModelForCausalLM.from_pretrained(\n",
-    "    model_ckpt, device_map=\"auto\", \n",
-    "    trust_remote_code=False, revision=\"main\"\n",
-    ")\n",
-    "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_ckpt, use_fast=True)"
+    "model_ckpt = 'TheBloke/Llama-2-13B-chat-GPTQ'\n",
+    "generator = pipeline(\n",
+    "    \"text-generation\", model=model_ckpt, device_map='auto',\n",
+    "    revision='main', tokenizer=model_ckpt, max_new_tokens=512,\n",
+    "    do_sample=False\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false
@@ -48,12 +56,6 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "generator = pipeline(\n",
-    "    \"text-generation\", model=model,\n",
-    "    tokenizer=tokenizer, max_new_tokens=512,\n",
-    "    do_sample=False\n",
-    ")\n",
-    "\n",
     "# Prompt template adapted from https://huggingface.co/TheBloke/Llama-2-7b-Chat-GPTQ\n",
     "prompt = (\n",
     "    \"1. A bat and a ball cost $1.10 in total. \"\n",
@@ -64,17 +66,17 @@
     "    \"3. In a lake, there is a patch of lily pads. \"\n",
     "    \"Every day, the patch doubles in size. \"\n",
     "    \"If it takes 48 days for the patch to cover the entire lake, \"\n",
-    "    \"how long would it take for the patch to cover half of the lake?\\n\"\n",
+    "    \"how long would it take for the patch to cover half of the \"\n",
+    "    \"lake?\\n\"\n",
     ")\n",
-    "\n",
     "prompt_template = (\n",
     "    f\"[INST] <<SYS>>\\n\"\n",
-    "    \"You are about to participate in a psychology experiment with three questions. \"\n",
-    "    \"Please take your time to consider your answer to each question, \"\n",
-    "    \"and provide a short answer.\\n\"\n",
+    "    \"You are about to participate in a psychology experiment \"\n",
+    "    \"with three questions. \"\n",
+    "    \"Please take your time to consider your answer to each \"\n",
+    "    \"question, and provide a short answer.\\n\"\n",
     "    f\"<</SYS>>\\n{prompt}[/INST]\\n\"\n",
     ")\n",
-    "\n",
     "\n",
     "print(prompt_template)"
    ],
