--- a/health/health_fe_finetune.ipynb
+++ b/health/health_fe_finetune.ipynb
@@ -16,15 +16,14 @@
     "import sys\n",
     "if 'google.colab' in sys.modules:  # If in Google Colab environment\n",
     "    # Installing requisite packages\n",
-    "    !pip install datasets transformers evaluate\n",
-    "    !pip install accelerate -U\n",
+    "    !pip install datasets transformers evaluate accelerate -U\n",
     "\n",
     "    # Mount google drive to enable access to data files\n",
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
     "\n",
     "    # Change working directory to ex1\n",
-    "    %cd /content/drive/MyDrive/LLM4behavior_workshop/ex1"
+    "    %cd /content/drive/MyDrive/LLM4behavior_workshop/health"
    ]
   },
   {
