--- a/personality/personality.ipynb
+++ b/personality/personality.ipynb
@@ -38,8 +38,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-07T09:32:59.088008Z",
-     "start_time": "2023-11-07T09:32:57.997114Z"
+     "end_time": "2023-11-13T14:37:48.636230Z",
+     "start_time": "2023-11-13T14:37:48.179981Z"
     }
    },
    "id": "7a12dea23ca8d2cf"
@@ -66,8 +66,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-06T17:13:11.530522Z",
-     "start_time": "2023-11-06T17:13:11.517990Z"
+     "end_time": "2023-11-13T14:37:48.649050Z",
+     "start_time": "2023-11-13T14:37:48.636594Z"
     }
    },
    "id": "980be06b6a355d17"
@@ -93,8 +93,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-06T17:13:11.546974Z",
-     "start_time": "2023-11-06T17:13:11.527970Z"
+     "end_time": "2023-11-13T14:37:48.666927Z",
+     "start_time": "2023-11-13T14:37:48.648985Z"
     }
    },
    "id": "aadb3057d6b58b3"
@@ -103,54 +103,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "outputs": [
-    {
-     "data": {
-      "text/plain": "Downloading (…)okenizer_config.json:   0%|          | 0.00/28.0 [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "936078963b5548c3b8fdde52e91e9065"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading (…)lve/main/config.json:   0%|          | 0.00/483 [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "a300eecc1e1c4ca48ed51ac60021d752"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading (…)solve/main/vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "c8f79b6ba2f7442798289d9c8659b7b2"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading (…)/main/tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "b095f79cd22e433a8952ee8e370603d4"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -168,8 +120,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-06T17:13:15.436203Z",
-     "start_time": "2023-11-06T17:13:13.319431Z"
+     "end_time": "2023-11-13T14:37:48.838553Z",
+     "start_time": "2023-11-13T14:37:48.665424Z"
     }
    },
    "id": "7e9899764c20ff1"
@@ -184,7 +136,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "55c69a0101dc4c6089d9e53e3372e12c"
+       "model_id": "79333f7da76d4a7bb8b4f6a0f3f3cfec"
       }
      },
      "metadata": {},
@@ -216,8 +168,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-06T17:13:39.916720Z",
-     "start_time": "2023-11-06T17:13:15.440499Z"
+     "end_time": "2023-11-13T14:37:50.825336Z",
+     "start_time": "2023-11-13T14:37:48.842731Z"
     }
    },
    "id": "af3d4b563e1417bc"
@@ -243,8 +195,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-06T17:13:39.916995Z",
-     "start_time": "2023-11-06T17:13:39.912210Z"
+     "end_time": "2023-11-13T14:37:50.835516Z",
+     "start_time": "2023-11-13T14:37:50.826878Z"
     }
    },
    "id": "b59e8a62cd6224de"
@@ -270,8 +222,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-06T17:13:39.924386Z",
-     "start_time": "2023-11-06T17:13:39.915582Z"
+     "end_time": "2023-11-13T14:37:51.247318Z",
+     "start_time": "2023-11-13T14:37:51.233437Z"
     }
    },
    "id": "6f0a90df92dae822"
@@ -303,8 +255,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-06T17:13:39.989653Z",
-     "start_time": "2023-11-06T17:13:39.982102Z"
+     "end_time": "2023-11-13T14:37:51.479314Z",
+     "start_time": "2023-11-13T14:37:51.474701Z"
     }
    },
    "id": "e379819528ec61ad"
@@ -314,22 +266,10 @@
    "execution_count": 9,
    "outputs": [
     {
-     "data": {
-      "text/plain": "Downloading model.safetensors:   0%|          | 0.00/268M [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "2bc3ec8a63b74f14848c64f05461e98a"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertModel: ['vocab_layer_norm.weight', 'vocab_projector.bias', 'vocab_layer_norm.bias', 'vocab_transform.bias', 'vocab_transform.weight']\n",
+      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertModel: ['vocab_projector.bias', 'vocab_layer_norm.weight', 'vocab_layer_norm.bias', 'vocab_transform.bias', 'vocab_transform.weight']\n",
       "- This IS expected if you are initializing DistilBertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing DistilBertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -351,8 +291,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-06T17:13:49.836688Z",
-     "start_time": "2023-11-06T17:13:39.985864Z"
+     "end_time": "2023-11-13T14:37:52.733639Z",
+     "start_time": "2023-11-13T14:37:51.522165Z"
     }
    },
    "id": "698edca117e2b80f"
