update colab working directories

--- a/crt/crt.ipynb
+++ b/crt/crt.ipynb
@@ -18,8 +18,8 @@
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
     "\n",
-    "    # Change working directory to ex1\n",
-    "    %cd /content/drive/MyDrive/LLM4behavior_workshop/crt"
+    "    # Change working directory to crt\n",
+    "    %cd /content/drive/MyDrive/LLM4BeSci/crt"
    ]
   },
   {
