--- a/personality/personality.ipynb
+++ b/personality/personality.ipynb
@@ -22,8 +22,8 @@
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
     "\n",
-    "    # Changing working directory to ex1\n",
-    "    %cd /content/drive/MyDrive/LLM4behavior_workshop/personality"
+    "    # Changing working directory to personality\n",
+    "    %cd /content/drive/MyDrive/LLM4BeSci/personality"
    ]
   },
   {
