--- a/health/health.ipynb
+++ b/health/health.ipynb
@@ -22,8 +22,8 @@
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
     "\n",
-    "    # Change working directory to ex1\n",
-    "    %cd /content/drive/MyDrive/LLM4behavior_workshop/health"
+    "    # Change working directory to health\n",
+    "    %cd /content/drive/MyDrive/LLM4BeSci/health"
    ]
   },
   {
